@@ -57,7 +57,11 @@ nn-nn-06 - Version 5.0.5
 	  case-insensitive on the first character of the target. This bug broke
 	  rewriteBatchedStatements functionality when prepared statements don't
 	  use upper-case for the VALUES clause in their statements.
-	  	    	  	  	  	   	  	   
+
+	- Fixed BUG#21480 - Some exceptions thrown out of StandardSocketFactory
+	  were needlessly wrapped, obscurring their true cause, especially when
+	  using socket timeouts.
+	  	  	    	  	  	  	   	  	   
 10-20-06 - Version 5.0.4
 
     - Fixed BUG#21379 - column names don't match metadata in cases 
